@@ -1,9 +1,11 @@
+// SPDX-License-Identifier: Apache-2.0 OR BSD-2-Clause
+
 package org.owasp.shim;
 
 import java.util.*;
 
 @SuppressWarnings("Since15") // We're compiling two versions to handle @since problems.
-final class ForJava9AndLater extends Java8Shim {
+final class ForJava10AndLater extends Java8Shim {
 
     @Override public <T> List<T> listOf() {
         return List.of();
@@ -62,6 +64,6 @@ final class ForJava9AndLater extends Java8Shim {
     }
 
     @Override public <T> Set<T> setCopyOf(Collection<? extends T> c) {
-        return Set.copyOf(c);
+        return Collections.unmodifiableSet(new LinkedHashSet<>(c));
     }
 }
